set02/problem07_session.txt
**********************
Windows PowerShell transcript start
Start time: 20231021202158
Username: LAPTOP-HF3J6R39\sukhi
RunAs User: LAPTOP-HF3J6R39\sukhi
Configuration Name: 
Machine: LAPTOP-HF3J6R39 (Microsoft Windows NT 10.0.22621.0)
Host Application: C:\Windows\System32\WindowsPowerShell\v1.0\powershell.exe -noexit -command try { . "c:\Users\sukhi\AppData\Local\Programs\Microsoft VS Code\resources\app\out\vs\workbench\contrib\terminal\browser\media\shellIntegration.ps1" } catch {}
Process ID: 15924
PSVersion: 5.1.22621.2428
PSEdition: Desktop
PSCompatibleVersions: 1.0, 2.0, 3.0, 4.0, 5.0, 5.1.22621.2428
BuildVersion: 10.0.22621.2428
CLRVersion: 4.0.30319.42000
WSManStackVersion: 3.0
PSRemotingProtocolVersion: 2.3
SerializationVersion: 1.1.0.1
**********************
Transcript started, output file is c:\Users\sukhi\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-Sukhith29\set02\problem07_session.txt
]633;E;Start-Transcript -Path "c:\x5cUsers\x5csukhi\x5cgithub-classroom\x5cFPC-advanced\x5cfpc-advanced-classroom-1st-year-assignment-Sukhith29\x5cset02\x5cproblem07_session.txt";c2acbe5c-f671-460b-ad76-9cd01d60ffef]633;D;0]633;A]633;P;Cwd=C:\x5cUsers\x5csukhi\x5cgithub-classroom\x5cFPC-advanced\x5cfpc-advanced-classroom-1st-year-assignment-Sukhith29PS C:\Users\sukhi\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-Sukhith29> ]633;B
PS>gcc -g "c:\Users\sukhi\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-Sukhith29\set02\problem07.c" -o "c:\Users\sukhi\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-Sukhith29\set02\problem07.exe" 2>&1
gcc : c:\Users\sukhi\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-y
ear-assignment-Sukhith29\set02\problem07.c:1:1: error: unknown type name
'Write'
At line:1 char:1
+ gcc -g "c:\Users\sukhi\github-classroom\FPC-advanced\fpc-advanced-cla ...
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (c:\Users\sukhi\...pe name 'Write'
   :String) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError

 Write a program to find the area of a triangle.
 ^~~~~
c:\Users\sukhi\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-as
signment-Sukhith29\set02\problem07.c:1:9: error: expected '=', ',', ';', 'asm'
or '__attribute__' before 'program'
 Write a program to find the area of a triangle.
         ^~~~~~~
c:\Users\sukhi\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-as
signment-Sukhith29\set02\problem07.c:1:9: error: unknown type name 'program'
c:\Users\sukhi\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-as
signment-Sukhith29\set02\problem07.c:4:1: error: stray '`' in program
 ```c
 ^
c:\Users\sukhi\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-as
signment-Sukhith29\set02\problem07.c:4:2: error: stray '`' in program
 ```c
  ^
c:\Users\sukhi\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-as
signment-Sukhith29\set02\problem07.c:4:3: error: stray '`' in program
 ```c
   ^
c:\Users\sukhi\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-as
signment-Sukhith29\set02\problem07.c:7:3: warning: data definition has no type
or storage class
 } Triangle;
   ^~~~~~~~
c:\Users\sukhi\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-as
signment-Sukhith29\set02\problem07.c:7:3: warning: type defaults to 'int' in
declaration of 'Triangle' [-Wimplicit-int]
c:\Users\sukhi\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-as
signment-Sukhith29\set02\problem07.c:9:1: error: unknown type name 'Triangle'
 Triangle input_triangle();
 ^~~~~~~~
c:\Users\sukhi\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-as
signment-Sukhith29\set02\problem07.c:10:16: error: expected declaration
specifiers or '...' before 'Triangle'
 void find_area(Triangle *t);
                ^~~~~~~~
c:\Users\sukhi\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-as
signment-Sukhith29\set02\problem07.c:11:13: error: expected declaration
specifiers or '...' before 'Triangle'
 void output(Triangle t);
             ^~~~~~~~
c:\Users\sukhi\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-as
signment-Sukhith29\set02\problem07.c:19:26: error: 'Triangle' redeclared as
different kind of symbol
 typedef struct _triangle Triangle;
                          ^~~~~~~~
c:\Users\sukhi\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-as
signment-Sukhith29\set02\problem07.c:7:3: note: previous declaration of
'Triangle' was here
 } Triangle;
   ^~~~~~~~
c:\Users\sukhi\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-as
signment-Sukhith29\set02\problem07.c:21:10: error: conflicting types for
'input_triangle'
 Triangle input_triangle()
          ^~~~~~~~~~~~~~
c:\Users\sukhi\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-as
signment-Sukhith29\set02\problem07.c:9:10: note: previous declaration of
'input_triangle' was here
 Triangle input_triangle();
          ^~~~~~~~~~~~~~
c:\Users\sukhi\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-as
signment-Sukhith29\set02\problem07.c: In function 'main':
c:\Users\sukhi\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-as
signment-Sukhith29\set02\problem07.c:47:1: error: expected ';' before '}' token
 }
 ^
c:\Users\sukhi\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-as
signment-Sukhith29\set02\problem07.c: In function 'main':
c:\Users\sukhi\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-as
signment-Sukhith29\set02\problem07.c:47:1: error: expected ';' before '}' token
 }
 ^
]633;E;gcc -g "c:\x5cUsers\x5csukhi\x5cgithub-classroom\x5cFPC-advanced\x5cfpc-advanced-classroom-1st-year-assignment-Sukhith29\x5cset02\x5cproblem07.c" -o "c:\x5cUsers\x5csukhi\x5cgithub-classroom\x5cFPC-advanced\x5cfpc-advanced-classroom-1st-year-assignment-Sukhith29\x5cset02\x5cproblem07.exe" 2>&1;c2acbe5c-f671-460b-ad76-9cd01d60ffef]633;D;1]633;A]633;P;Cwd=C:\x5cUsers\x5csukhi\x5cgithub-classroom\x5cFPC-advanced\x5cfpc-advanced-classroom-1st-year-assignment-Sukhith29PS C:\Users\sukhi\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-Sukhith29> ]633;B
]633;E]633;D]633;A]633;P;Cwd=C:\x5cUsers\x5csukhi\x5cgithub-classroom\x5cFPC-advanced\x5cfpc-advanced-classroom-1st-year-assignment-Sukhith29PS C:\Users\sukhi\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-Sukhith29> ]633;B
PS>Start-Transcript -Path "c:\Users\sukhi\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-Sukhith29\set02\problem07_session.txt"
**********************
Windows PowerShell transcript end
End time: 20231021202537
**********************
